# holaWorld

./: CMakeLists.txt  README.md  appveyor.yml
installer/: holaWorld.msi
src/: hola.cpp  hola.hpp
test/: test_hola.cpp
